@@ -162,7 +162,7 @@ public class TestCaseOldAPI extends ComplexTestCase {
                 float fHeight = (float)17.0;
 
                 xTitleProp.setPropertyValue( "String", aTitle );
-                xTitleProp.setPropertyValue( "CharHeight", new Float( fHeight ) );
+                xTitleProp.setPropertyValue( "CharHeight", Float.valueOf( fHeight ) );
 
                 float fNewHeight = AnyConverter.toFloat( xTitleProp.getPropertyValue( "CharHeight" ) );
                 assure( "Changing CharHeight via old API failed", fNewHeight == fHeight );
@@ -213,8 +213,8 @@ public class TestCaseOldAPI extends ComplexTestCase {
                 float fHeight = (float)14.0;
 
                 xTitleProp.setPropertyValue( "CharColor", Integer.valueOf( nColor ) );
-                xTitleProp.setPropertyValue( "CharWeight", new Float( fWeight ));
-                xTitleProp.setPropertyValue( "CharHeight", new Float( fHeight ) );
+                xTitleProp.setPropertyValue( "CharWeight", Float.valueOf( fWeight ));
+                xTitleProp.setPropertyValue( "CharHeight", Float.valueOf( fHeight ) );
 
                 int nNewColor = AnyConverter.toInt( xTitleProp.getPropertyValue( "CharColor" ) );
                 assure( "Changing CharColor via old API failed", nNewColor == nColor );
@@ -356,7 +356,7 @@ public class TestCaseOldAPI extends ComplexTestCase {
             double nNewMax = 12.3;
             double nNewOrigin = 2.7;
 
-            xProp.setPropertyValue( "Max", new Double( nNewMax ));
+            xProp.setPropertyValue( "Max", Double.valueOf( nNewMax ));
             assure( "AutoMax is on", ! AnyConverter.toBoolean( xProp.getPropertyValue( "AutoMax" )) );
 
             assure( "Maximum value invalid",
@@ -367,7 +367,7 @@ public class TestCaseOldAPI extends ComplexTestCase {
             xProp.setPropertyValue( "AutoMin", Boolean.TRUE);
             assure( "AutoMin is off", AnyConverter.toBoolean( xProp.getPropertyValue( "AutoMin" )) );
 
-            xProp.setPropertyValue( "Origin", new Double( nNewOrigin ));
+            xProp.setPropertyValue( "Origin", Double.valueOf( nNewOrigin ));
             assure( "Origin invalid",
                     utils.approxEqual(
                         AnyConverter.toDouble( xProp.getPropertyValue( "Origin" )),
@@ -390,7 +390,7 @@ public class TestCaseOldAPI extends ComplexTestCase {
             assure( "Property LineColor",
                     AnyConverter.toInt( xProp.getPropertyValue( "LineColor" )) == nNewColor );
             float fNewCharHeight = (float)(16.0);
-            xProp.setPropertyValue( "CharHeight", new Float( fNewCharHeight ));
+            xProp.setPropertyValue( "CharHeight", Float.valueOf( fNewCharHeight ));
             assure( "Property CharHeight",
                     AnyConverter.toFloat( xProp.getPropertyValue( "CharHeight" )) == fNewCharHeight );
 
@@ -400,7 +400,7 @@ public class TestCaseOldAPI extends ComplexTestCase {
                     AnyConverter.toInt( xProp.getPropertyValue( "TextRotation" )) == nNewTextRotation );
 
             double fStepMain = 10.0;
-            xProp.setPropertyValue( "StepMain", new Double( fStepMain ));
+            xProp.setPropertyValue( "StepMain", Double.valueOf( fStepMain ));
             assure( "Property StepMain",
                     AnyConverter.toDouble( xProp.getPropertyValue( "StepMain" )) == fStepMain );
 
@@ -408,7 +408,7 @@ public class TestCaseOldAPI extends ComplexTestCase {
             // internally, the help-step is stored as an integer number of
             // substeps
             double fStepHelp = 5.0;
-            xProp.setPropertyValue( "StepHelp", new Double( fStepHelp ));
+            xProp.setPropertyValue( "StepHelp", Double.valueOf( fStepHelp ));
             assure( "Property StepHelp",
                     AnyConverter.toDouble( xProp.getPropertyValue( "StepHelp" )) == fStepHelp );
 
@@ -444,7 +444,7 @@ public class TestCaseOldAPI extends ComplexTestCase {
                         xLegendProp.getPropertyValue( "Alignment" )) == eNewPos );
 
             float fNewCharHeight = (float)(11.0);
-            xLegendProp.setPropertyValue( "CharHeight", new Float( fNewCharHeight ));
+            xLegendProp.setPropertyValue( "CharHeight", Float.valueOf( fNewCharHeight ));
             assure( "Property CharHeight",
                     AnyConverter.toFloat( xLegendProp.getPropertyValue( "CharHeight" )) == fNewCharHeight );
 
