@@ -737,7 +737,7 @@ XMultiPropertySet
         else if(cl.equals(boolean.class))
             retVal= Boolean.valueOf(AnyConverter.toBoolean(obj));
         else if (cl.equals(char.class))
-            retVal= new Character(AnyConverter.toChar(obj));
+            retVal= Character.valueOf(AnyConverter.toChar(obj));
         else if (cl.equals(byte.class))
             retVal= Byte.valueOf(AnyConverter.toByte(obj));
         else if (cl.equals(short.class))
@@ -747,9 +747,9 @@ XMultiPropertySet
         else if (cl.equals(long.class))
             retVal= Long.valueOf(AnyConverter.toLong(obj));
         else if (cl.equals(float.class))
-            retVal= new Float(AnyConverter.toFloat(obj));
+            retVal= Float.valueOf(AnyConverter.toFloat(obj));
         else if (cl.equals(double.class))
-            retVal= new Double(AnyConverter.toDouble(obj));
+            retVal= Double.valueOf(AnyConverter.toDouble(obj));
         else if (cl.equals(String.class))
             retVal= AnyConverter.toString(obj);
         else if (cl.isArray())
@@ -759,7 +759,7 @@ XMultiPropertySet
         else if (cl.equals(Boolean.class))
             retVal= Boolean.valueOf(AnyConverter.toBoolean(obj));
         else if (cl.equals(Character.class))
-            retVal= new Character(AnyConverter.toChar(obj));
+            retVal= Character.valueOf(AnyConverter.toChar(obj));
         else if (cl.equals(Byte.class))
             retVal= Byte.valueOf(AnyConverter.toByte(obj));
         else if (cl.equals(Short.class))
@@ -769,9 +769,9 @@ XMultiPropertySet
         else if (cl.equals(Long.class))
             retVal= Long.valueOf(AnyConverter.toLong(obj));
         else if (cl.equals(Float.class))
-            retVal= new Float(AnyConverter.toFloat(obj));
+            retVal= Float.valueOf(AnyConverter.toFloat(obj));
         else if (cl.equals(Double.class))
-            retVal= new Double(AnyConverter.toDouble(obj));
+            retVal= Double.valueOf(AnyConverter.toDouble(obj));
         else if (XInterface.class.isAssignableFrom(cl))
             retVal= AnyConverter.toObject(new Type(cl), obj);
         else if (com.sun.star.uno.Enum.class.isAssignableFrom(cl))
