@@ -332,11 +332,11 @@ public class UnoRuntime {
         case TypeClass.UNSIGNED_HYPER_value:
             return Long.valueOf(0);
         case TypeClass.FLOAT_value:
-            return new Float(0.0f);
+            return Float.valueOf(0.0f);
         case TypeClass.DOUBLE_value:
-            return new Double(0.0);
+            return Double.valueOf(0.0);
         case TypeClass.CHAR_value:
-            return new Character('\u0000');
+            return Character.valueOf('\u0000');
         case TypeClass.STRING_value:
             return "";
         case TypeClass.TYPE_value:
